# mailbits

./: .pre-commit-config.yaml  CHANGELOG.md  README.rst  email2dict.py  pyproject.toml  setup.cfg  tox.ini
src/: email2dict.py
src/email2dict/: __init__.py
src/mailbits/: __init__.py  email2dict.py  misc.py
test/: test_content_type.py  test_email2dict.py  test_format_addresses.py  test_parse_address.py  test_parse_addresses.py  test_recipient_addresses.py  test_util.py
test/data/emails/: encoded_headers.eml  encoded_headers.py  encoded_param.eml  encoded_param.py  from_line.eml  from_line.py  groups.py  has_rfc822.eml  has_rfc822.py  related.py  reply_to.eml  reply_to.py  resent.eml  resent.py  sender.eml  sender.py  twine_release.eml  twine_release.py
test/data/mboxes/: rfc822.mbox  rfc822.py  sample.mbox  sample.py
