[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailbits"
dynamic = ["version"]
description = "Assorted e-mail utility functions"
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "mailbits@varonathe.org" }
]

keywords = [
    "EmailMessage",
    "content type",
    "e-mail",
    "e-mail address",
    "e-mail comparison",
    "e-mail inspection",
    "email",
    "recipients",
]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "attrs >= 18.1",
    "typing_extensions; python_version < '3.8'",
]

[project.urls]
"Source Code" = "https://github.com/jwodder/mailbits"
"Bug Tracker" = "https://github.com/jwodder/mailbits/issues"

[tool.hatch.version]
path = "src/mailbits/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
exclude = "test/data/"
